--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,29 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body{
+    background-color: green;
+}
+
+#grid{
+    width: 1000px;
+}
+
+.square{
+    width: 100px;
+    height: 100px;
+    background-color: white;
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.square-blue{
+    background-color: rgb(0, 145, 255);
+}
+
+.square-red{
+    background-color: red;
+}
